# Sis_proga

./: CMakeLists.txt  README.md  ast.cpp  btree.cpp  catalog.cpp  database.cpp  demo.sh  demo.sql  executor.cpp  journal.cpp  lexer.cpp  parser.cpp  persistence.cpp  row.cpp  string_pool.cpp  table.cpp  value.cpp  where_eval.cpp
include/auth/: crypto.hpp  jwt.hpp  rbac.hpp
include/core/: btree.hpp  catalog.hpp  database.hpp  journal.hpp  persistence.hpp  row.hpp  string_pool.hpp  table.hpp  value.hpp
include/exec/: executor.hpp
include/net/: protocol.hpp
include/server/: access_log.hpp  job_queue.hpp  telemetry.hpp
include/sql/: ast.hpp  lexer.hpp  parser.hpp  where_eval.hpp
src/auth/: crypto.cpp  jwt.cpp  rbac.cpp
src/client/: main_client.cpp
src/core/: btree.cpp  catalog.cpp  database.cpp  journal.cpp  persistence.cpp  row.cpp  string_pool.cpp  table.cpp  value.cpp
src/exec/: executor.cpp
src/net/: protocol.cpp
src/server/: access_log.cpp  entrypoint_main.cpp  job_queue.cpp  storage_main.cpp  telemetry.cpp
src/sql/: ast.cpp  lexer.cpp  parser.cpp  where_eval.cpp
